refactor: Refactor layout styles and remove redundant CSS
The main changes involve refactoring layout styles to improve readability and responsiveness. Additionally, the `_links.pcss` file was removed indicating obsolete or redundant CSS. These changes are part of an effort to clean up and streamline existing styles, aiming for a more efficient and maintainable codebase.

--- a/src/_includes/layouts/advent.njk
+++ b/src/_includes/layouts/advent.njk
@@ -4,7 +4,7 @@ layout: layouts/base.njk
 {{ comp.SiteNav() | safe }}
 
 <main class="tdbc-container">
-  <article class="event tdbc-mx-auto">
+  <article class="event mr-auto ml-auto">
     <header class="event__header">
       <h1>{{ title }}</h1>
       <div class="float-right">
