--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -6,7 +6,7 @@ layout: layouts/base.njk
 
 <main class="tdbc-container">
   <div id='toc'></div>
-  <article class="post tdbc-mx-auto">
+  <article class="post mr-auto ml-auto">
     <header class="post__header">
       <h1>{{ title }}</h1>
       <div class="post__details">
