--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -106,7 +106,7 @@
     {{ content | safe }}
     <footer class="tdbc-background--secondary">
       <div class="tdbc-container tdbc-text-align-center">
-        <div class="tdbc-row text-white tdbc-mx-auto" style="line-height: 50px">
+        <div class="tdbc-row text-white mr-auto ml-auto" style="line-height: 50px">
           <p class="tdbc-mb-none">&copy; {% year %} Mamezou Co.,Ltd.</p>
           <div style="text-align:right">
             <a href="https://www.mamezou.com/">
