--- a/src/_includes/layouts/season.njk
+++ b/src/_includes/layouts/season.njk
@@ -4,7 +4,7 @@ layout: layouts/base.njk
 {{ comp.SiteNav() | safe }}
 
 <main class="tdbc-container">
-  <article class="season tdbc-mx-auto">
+  <article class="season mr-auto ml-auto">
     <header class="season__header">
       <h1>{{ title }}</h1>
       <div class="float-right">
