--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -46,10 +46,10 @@ layout: layouts/base.njk
 
   <div>
     <fieldset class="chatgpt-jargon">
-      <legend><img alt="mameka" width="30px" height="100%" src="/img/logo/mameka6_30.png" />豆香の豆知識(Powered by GPT-4 turbo)</legend>
+      <legend><img alt="mameka" width="30px" height="100%" src="/img/logo/mameka6_30.png" />豆香の豆知識(Powered by GPT-4 Turbo)</legend>
       <div>今日の言葉: {{ gpt.columns[0].title }}</div>
       <div>{{ gpt.columns[0].text | safe }}</div>
-      <div><b>※本コラムはOpenAIのChat Completion APIで生成したものです。存在しない言葉(AIの幻覚/作話)だったり、内容に誤りがある可能性があります。</b></div>
+      <div><b>※本コラムはOpenAI APIで生成したものです。存在しない言葉(幻覚/作話)だったり、内容に誤りがある可能性があります。</b></div>
       <div>過去のコラムは<a href="/gpt/mameka/" style="text-decoration:underline">こちら</a>から見れます!</div>
     </fieldset>
   </div>
