feat: Add blog image on sidebar area if needed.
This update adds functionality to display an image in the table of contents section of blog posts. Additional properties (path, imageEnabled, imageUrl) were included in the Toc function, and conditional rendering was applied for the image. Changes also involve the render method and the modifications in the post template file to pass the necessary values.

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -113,8 +113,9 @@ layout: layouts/base.njk
   </article>
   {%- initClipboardJS %}
   {%- mermaidTag %}
+  {% set aiImage %}{% if image == true %}true{% else %}false{% endif %}{% endset %}
   <script type="module">
     import { render } from '/js/preact/toc.client.js';
-    render(document.getElementById("toc"));
+    render(document.getElementById("toc"), '{{ page.src.path }}', "{{ meta.imageUrl }}", {{ aiImage }});
   </script>
 </main>
