--- a/src/generators/feed.njk
+++ b/src/generators/feed.njk
@@ -1,6 +1,7 @@
 ---
 url: /feed/feed.xml
 exclude: true
+date: 2021-11-29
 ---
 <?xml version="1.0" encoding="utf-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom">
