--- a/src/_includes/styles/_prism.pcss
+++ b/src/_includes/styles/_prism.pcss
@@ -168,3 +168,18 @@ pre[class*="language-"] {
 .token.italic {
   font-style: italic;
 }
+
+/* language-diff plugin */
+pre.diff-highlight > code .token.deleted:not(.prefix),
+pre > code.diff-highlight .token.deleted:not(.prefix) {
+  background-color: rgba(255, 0, 0, .1);
+  color: inherit;
+  display: block;
+}
+
+pre.diff-highlight > code .token.inserted:not(.prefix),
+pre > code.diff-highlight .token.inserted:not(.prefix) {
+  background-color: rgba(0, 255, 128, .1);
+  color: inherit;
+  display: block;
+}
