Update code block plugin and code-filename styling
The code block plugin within markdown-it has been streamlined for efficiency, removing the need for in-line styling within the plugin. Additionally, the "code-filename" class has been updated within the 'style.css' for consistency and improved readability.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -319,7 +319,7 @@ button.code-copy {
 }
 
 span.code-filename {
-  @apply top-2 left-2 rounded-sm bg-blue-950 outline-none text-white absolute pt-1 pb-1 pr-2 pl-2;
+  @apply top-2 left-2 rounded-sm bg-gray-700 outline-none text-white absolute pt-1 pb-1 pr-2 pl-2;
 }
 
 span.code-filename + pre {
