--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -78,7 +78,7 @@ layout: layouts/base.njk
                   <div class="post-list__tags">
                     {% for tag in post.tags %}
                       {%- if (search.values('tags') | validTags).indexOf(tag) != -1 -%}
-                        {% set tagUrl %}/tags/{{ tag }}/{% endset %}
+                        {% set tagUrl %}/tags/{{ tag | lower }}/{% endset %}
                         <a href="{{ tagUrl | url }}">#{{ tag }}</a>
                       {%- endif -%}
                     {% endfor %}
