--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -79,6 +79,7 @@
     <meta property="og:image" content="{{meta.url}}/img/ogp/mamezou-tech-ogp-main.png" />
     <meta name="twitter:image" content="{{meta.url}}/img/ogp/mamezou-tech-ogp-main.png" />
     {% endif %}
+    <meta name="github" content="{{ page.src.path }}" />
 
     <link
       rel="alternate"
