--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -45,8 +45,9 @@ layout: layouts/base.njk
   募集中の求人情報は<a class="new-tab-link" target="_blank" rel="noreferrer noopener" style="text-decoration:underline" href="https://hrmos.co/pages/mamezou-recruit/jobs">こちら</a>をご覧ください。</p>
 
   <div>
-    <fieldset class="chatgpt-jargon">
+    <fieldset class="chatgpt-jargon mameka-column">
       <legend><img alt="mameka" width="30px" height="100%" src="/img/logo/mameka6_30.png" />豆香の豆知識(Powered by GPT-4 Turbo)</legend>
+      <img src="{{ meta.imageUrl }}/mameka/{% currentDate %}-daily-column-300.webp" width="300px" style="margin-right: 20px;" alt="image for mameka column" />
       <div>今日の言葉: {{ gpt.columns[0].title }}</div>
       <div>{{ gpt.columns[0].text | safe }}</div>
       <div><b>※本コラムはOpenAI APIで生成したものです。存在しない言葉(幻覚/作話)だったり、内容に誤りがある可能性があります。</b></div>
