chore: Add class to img tags in .mameka-column
The img tags in .mameka-column and home.njk have been refactored to include the class "column-image". The changes provide more accurate targeting for CSS styling in mobile and larger views, enhancing the visual aesthetics and consistency on different screen sizes.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -399,11 +399,11 @@ span.code-filename + pre {
 }
 
 .mameka-column {
-  img {
+  img.column-image {
     @apply float-right ml-6
   }
   @media (max-width: 600px) {
-    img {
+    img.column-image {
       @apply hidden
     }
   }
