feat: add translated articles(2024-01 ~ 02)

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -27,6 +27,7 @@
           branch: '{{ meta.branch }}',
           theme: 'light',
           author: '{{ author }}',
+          translate: '{{ translate }}',
           tags: '{{ tags }}',
           date: '{{ date }}'
         }
