feat: Add 2024 spring event page

--- a/src/_includes/layouts/season.njk
+++ b/src/_includes/layouts/season.njk
@@ -12,8 +12,10 @@ layout: layouts/base.njk
       </div>
     </header>
 
-    <main class="season__content">
-      {{ content | safe }}
+    <main class="event__content">
+      <p>{{ leadingText }}</p>
+      <p><a href={{ linkUrl }}>{{ linkText }}</a></p>
+      {{ comp.EventSchedule({ period: period }) | safe }}
     </main>
 
     <div class="mt-0">
