chore: add event banner

--- a/src/_includes/styles/_ad.pcss
+++ b/src/_includes/styles/_ad.pcss
@@ -1,4 +1,8 @@
 fieldset.ad {
+  font-size: .875rem;
+  border-width: 2px;
+  border-style: groove;
+  @apply rounded-xl border-stone-200 p-2;
   margin: 1rem 0;
   display: flex;
   justify-content: space-between;
@@ -6,7 +10,7 @@ fieldset.ad {
   max-width: 800px;
 
   .ad-text {
-    width: 70%;
+    width: 80%;
   }
 
   img {
