--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -62,15 +62,15 @@
     <meta property="fb:app_id" content="625393465273959" />
     <meta property="og:type" content="website" />
     <meta
-      name="og:title"
+      property="og:title"
       content="{{pageTitle}}"
     />
     <meta
-      name="og:description"
+      property="og:description"
       content="{{pageDescription}}"
     />
     <meta
-      name="og:url"
+      property="og:url"
       content="{{ meta.url }}{{ url }}"
     />
     {% if title %}
