--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -2,7 +2,7 @@
 <html lang="ja">
 {%- set pageTitle %}{% if title %}{{ title }} | {% endif %}{{ meta.siteName }}{% endset -%}
 {%- set pageDescription %}{% shortDesc search.pages(), page, meta.siteDescription %}{% endset -%}
-{%- set pageSocialImg %}{{ meta.url }}/og/?title={% if title %}{{ title }}{% else %}home{% endif %}{% if category %}&category={{ category }}{% endif %}{% endset -%}
+{%- set pageSocialImg %}{{ meta.url }}/og/?title={% if title %}{{ title | percentEncode }}{% else %}home{% endif %}{% if category %}&category={{ category | percentEncode }}{% endif %}{% endset -%}
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
