chore: set lang to en on translated pages for SEO

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="ja">
+{%- set lang %}{% if translate == true %}en{% else %}ja{% endif %}{% endset -%}
+<html lang="{{ lang }}">
 {%- set siteName %}{% if translate == true %}{{ meta.siteEnName }}{% else %}{{ meta.siteName }}{% endif %}{% endset -%}
 {%- set pageTitle %}{% if title %}{{ title }} | {% endif %}{{ siteName }}{% endset -%}
 {%- set pageDescription %}{% shortDesc search.pages(), page, meta.siteDescription %}{% endset -%}
