--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -2,7 +2,7 @@
 layout: layouts/base.njk
 ---
 
-{{ comp.SiteNav() | safe }}
+{{ comp.SiteNav({en: translate == true}) | safe }}
 
 <main class="tdbc-container">
   <div id='toc'></div>
